feat(bttr): convert to updated php containers

--- a/bttr/devcontainer/Dockerfile
+++ b/bttr/devcontainer/Dockerfile
@@ -1,14 +1,14 @@
 # syntax=docker/dockerfile:1
 
-ARG PACKAGE_VERSION="latest"
+ARG VERSION="8.1"
+ARG BASE_IMAGE="ghcr.io/99linesofcode/devcontainer:${VERSION}"
 
-FROM ghcr.io/99linesofcode/php-devcontainer:$PACKAGE_VERSION
+FROM ${BASE_IMAGE}
 
 LABEL maintainer="Jordy Schreuders <jordy@schreuders.it>"
 
 ARG DEBIAN_FRONTEND=noninteractive
 ARG USER=abc
-ARG PHP_VERSION="8.0"
 
 SHELL ["zsh", "-c"]
 
@@ -23,7 +23,30 @@ RUN \
   imagemagick \
   optipng \
   gifsicle \
-  php$PHP_VERSION-imagick \
-  php$PHP_VERSION-xsl
+  php${VERSION}-gd \
+  php${VERSION}-imagick \
+  php${VERSION}-mysql \
+  php${VERSION}-redis \
+  php${VERSION}-xsl
+
+# php${VERSION}-bcmath \
+# php${VERSION}-curl \
+# php${VERSION}-dev \
+# php${VERSION}-imap \
+# php${VERSION}-igbinary \
+# php${VERSION}-intl \
+# php${VERSION}-ldap \
+# php${VERSION}-mbstring \
+# php${VERSION}-memcached \
+# php${VERSION}-msgpack \
+# php${VERSION}-pcov \
+# php${VERSION}-pgsql \
+# php${VERSION}-readline \
+# php${VERSION}-soap \
+# php${VERSION}-sqlite3 \
+# php${VERSION}-swoole \
+# php${VERSION}-xml \
+# php${VERSION}-xdebug \
+# php${VERSION}-zip
 
 USER $USER
