--- a/bttr/docker-compose.yml
+++ b/bttr/docker-compose.yml
@@ -1,20 +1,26 @@
 services:
+  nginx:
+    container_name: ${APP_NAME}.nginx
+    image: nginx:alpine
+    ports:
+      - ${FORWARD_PHP_HTTP_PORT:-80}:80
+      - ${FORWARD_PHP_HTTPS_PORT:-443}:443
+    # See https://hub.docker.com/_/nginx
+    volumes:
+      - ./nginx/templates:/etc/nginx/templates
+      - $HOME/Development/99linesofcode/${APP_NAME}/api/public:/config/www/public
+    depends_on:
+      - php
+
   php:
     container_name: ${APP_NAME}.php
     build:
       context: ./php
       dockerfile: Dockerfile
       args:
-        - PACKAGE_VERSION=8.0
-        - PHP_VERSION=8
+        - VERSION=8
     extra_hosts:
       - host.docker.internal:host-gateway
-    ports:
-      - ${FORWARD_PHP_HTTP_PORT:-80}:80
-      - ${FORWARD_PHP_HTTPS_PORT:-443}:443
-    environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
     depends_on:
       - meilisearch
       - mysql
