--- a/devcontainer/Dockerfile
+++ b/devcontainer/Dockerfile
@@ -1,8 +1,9 @@
 # syntax=docker/dockerfile:1
 
-ARG PACKAGE_VERSION="22.04"
+ARG UBUNTU_VERSION="22.04"
+ARG BASE_IMAGE="ubuntu:${UBUNTU_VERSION}"
 
-FROM ubuntu:$PACKAGE_VERSION
+FROM ${BASE_IMAGE}
 
 LABEL maintainer="Jordy Schreuders <jordy@schreuders.it>"
 
@@ -34,24 +35,24 @@ RUN \
   zsh \
   && echo "*** Set locale and timezone ***" \
   && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && locale-gen \
-  && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ >> /etc/timezone \
+  && ln -snf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} >> /etc/timezone \
   && echo "*** Creating abc user ***" \
-  && useradd -u $PUID -U -d /config -s $(which zsh) -G users $USER \
-  && echo "abc ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/$USER \
-  && chmod 0440 /etc/sudoers.d/$USER \
+  && useradd -u ${PUID} -U -d /config -s $(which zsh) -G users ${USER} \
+  && echo "abc ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/${USER} \
+  && chmod 0440 /etc/sudoers.d/${USER} \
   && mkdir -p /app /config/.local/bin /defaults \
   && echo "*** Cleaning up build dependencies ***" \
   && apt-get -y autoremove \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-USER $USER
+USER ${USER}
 
 SHELL ["zsh", "-c"]
 
 RUN \
   echo "*** Setting up development environment ***" \
-  && sudo chown -R $USER:$USER /app /config /defaults \
+  && sudo chown -R ${USER}:${USER} /app /config /defaults \
   && echo "*** Setting up Asdf ***" \
   && git clone https://github.com/asdf-vm/asdf.git /config/.asdf \
   && source /config/.asdf/asdf.sh \
