--- a/php/nginx/templates/default.conf.template
+++ b/php/nginx/templates/default.conf.template
@@ -32,7 +32,7 @@ server {
     fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
   }
 
-  # deny all attempts to access hidden files such as .htaccess, .htpasswd but leave .well-known workign for letsencrypt
+  # deny all attempts to access hidden files such as .htaccess, .htpasswd but leave .well-known working for letsencrypt
   location ~ /\.(?!well-known).* {
       deny all;
   }
