refactor(ruby): extract dev and prod configs

--- a/ruby/prod/Dockerfile
+++ b/ruby/prod/Dockerfile
@@ -1,16 +1,18 @@
 # syntax=docker/dockerfile:1
 
-ARG PACKAGE_VERSION=alpine
+ARG RUBY_VERSION="3.2.1"
+ARG ALPINE_VERSION="3.17"
+ARG BASE_IMAGE="ruby:${RUBY_VERSION}-alpine${ALPINE_VERSION}"
 
-FROM ruby:$PACKAGE_VERSION
+FROM ${BASE_IMAGE}
 
 LABEL maintainer="Jordy Schreuders <jordy@schreuders.it>"
 
 COPY Gemfile Gemfile.lock ./
 
 RUN \
-  echo "*** Installing runtime packages ***" && \
-  apk add --no-cache --upgrade --virtual build-dependencies build-base \
+  echo "*** Installing runtime packages ***" \
+  && apk add --no-cache --upgrade --virtual build-dependencies build-base \
   mariadb-dev \
   && echo "*** Configure bundler to throw errors if Gemfile was modified ***" \
   && bundle config --global frozen 1 \
