--- a/ruby/devcontainer/Dockerfile
+++ b/ruby/devcontainer/Dockerfile
@@ -1,28 +1,25 @@
 # syntax=docker/dockerfile:1
 
-FROM ghcr.io/99linesofcode/devcontainer:latest
+ARG VERSION="latest"
+ARG BASE_IMAGE="ghcr.io/99linesofcode/devcontainer:${VERSION}"
+
+FROM ${BASE_IMAGE}
 
 LABEL maintainer="Jordy Schreuders <jordy@schreuders.it>"
 
 ARG DEBIAN_FRONTEND=noninteractive
 ARG USER=abc
 ARG BUILD_DEPS="autoconf bison patch build-essential rustc libssl-dev libyaml-dev libreadline6-dev zlib1g-dev libgmp-dev libncurses5-dev libffi-dev libgdbm6 libgdbm-dev libdb-dev uuid-dev"
-
-ENV RUBY_VERSION="3.2.1"
+ARG RUBY_VERSION="3.2.1"
 
 SHELL ["/bin/sh", "-c"]
 
 USER root
 
 RUN \
-  echo "*** Installing Ruby through Asdf ***" \
+  echo "*** Installing runtime packages ***" \
   && apt-get update && apt-get install -y --no-install-recommends \
-  $BUILD_DEPS \
-  libmariadb-dev \
-  && echo "*** Cleaning up build dependencies ***" \
-  && apt-get -y autoremove \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+  libmariadb-dev
 
 USER $USER
 
@@ -30,8 +27,14 @@ SHELL ["zsh", "-c"]
 
 RUN \
   echo "*** Installing Ruby and Rails ***" \
+  && sudo apt-get update && apt-get install -y --no-install-recommends \
+  $BUILD_DEPS \
   && source /config/.asdf/asdf.sh \
   && asdf plugin add ruby https://github.com/asdf-vm/asdf-ruby.git \
-  && asdf install ruby $RUBY_VERSION \
-  && asdf global ruby $RUBY_VERSION \
-  && gem install rails
+  && asdf install ruby ${RUBY_VERSION} \
+  && asdf global ruby ${RUBY_VERSION} \
+  && gem install rails \
+  && echo "*** Cleaning up build dependencies ***" \
+  && sudo apt-get -y autoremove \
+  && sudo apt-get clean \
+  && sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
