--- a/bttr/docker-compose.yml
+++ b/bttr/docker-compose.yml
@@ -1,30 +1,62 @@
 services:
-  nginx:
-    container_name: ${APP_NAME}.nginx
-    image: nginx:alpine
-    ports:
-      - ${FORWARD_PHP_HTTP_PORT:-80}:80
-      - ${FORWARD_PHP_HTTPS_PORT:-443}:443
-    # See https://hub.docker.com/_/nginx
+  devcontainer:
+    container_name: ${APP_NAME}.devcontainer
+    build:
+      context: ./devcontainer
+      # See https://docs.docker.com/compose/compose-file/build/#ssh
+      ssh:
+        - default
+      args:
+        - PHP_VERSION=8.0
+    working_dir: /config/www
+    tty: true
     volumes:
-      - ./nginx/templates:/etc/nginx/templates
-      - $HOME/Development/99linesofcode/${APP_NAME}/api/public:/config/www/public
-    depends_on:
-      - php
+      - $HOME/.ssh:/config/.ssh
+      - $HOME/.npmrc:/root/.npmrc
+      - $HOME/.config/composer/auth.json:/config/.config/composer/auth.json
+      - $HOME/Development/bttr/${APP_NAME}:/config/www
 
   php:
     container_name: ${APP_NAME}.php
     build:
-      context: ./php
-      dockerfile: Dockerfile
+      context: .
       args:
-        - VERSION=8
+        - PACKAGE_VERSION=8.0
+        - PHP_VERSION=8
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - XDEBUG_MODE=${PHP_XDEBUG_MODE:-off}
+      - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}
+    volumes:
+      - $HOME/Development/bttr/${APP_NAME}/api:/config/www
     extra_hosts:
       - host.docker.internal:host-gateway
     depends_on:
       - meilisearch
       - mysql
       - redis
+
+  # FIXME serve different urls for process.browser and SSR before we can migrate to a containerized node version
+  # node:
+  #   container_name: ${APP_NAME}.node
+  #   image: node:14.21.1
+  #   user: node
+  #   working_dir: /var/www/html
+  #   extra_hosts:
+  #     - host.docker.internal:host-gateway
+  #   ports:
+  #     - ${FORWARD_NODE_PORT:-3000}:3000
+  #     - ${FORWARD_VITE_PORT:-24678}:24678
+  #   environment:
+  #     - NODE_ENV=${APP_ENV:-development}
+  #     - NUXT_HOST=node
+  #     - NUXT_PORT=${FORWARD_NODE_PORT:-3000}
+  #   volumes:
+  #     - /home/jordy/Development/bttr/${APP_NAME}/nuxt:/var/www/html
+  #   command: npm run dev
+  #   depends_on:
+  #     - php
 
   mysql:
     container_name: ${APP_NAME}.mysql
@@ -75,6 +107,29 @@ services:
         ]
       retries: 3
       timeout: 5s
+
+  phpmyadmin:
+    image: phpmyadmin:latest
+    container_name: ${APP_NAME}.phpmyadmin
+    environment:
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - MYSQL_USER=${DB_USERNAME}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
+      - PMA_HOST=${APP_NAME}.mysql
+      - PMA_PMADB=phpmyadmin
+      - UPLOAD_LIMIT=512M
+    restart: unless-stopped
+    ports:
+      - ${PHPMYADMIN_PORT:-8888}:80
+    depends_on:
+      - mysql
+
+  mailpit:
+    container_name: ${APP_NAME}.mailpit
+    image: axllent/mailpit:latest
+    ports:
+      - ${FORWARD_MAILHOG_PORT:-1025}:1025
+      - ${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025
 
 networks:
   default:
