--- a/php/devcontainer/Dockerfile
+++ b/php/devcontainer/Dockerfile
@@ -1,14 +1,17 @@
 # syntax=docker/dockerfile:1
 
-ARG VERSION="8.1"
-ARG BASE_IMAGE="ghcr.io/99linesofcode/devcontainer:${VERSION}"
+ARG PHP_VERSION="8.1"
+ARG PACKAGE_VERSION="base-ubuntu22.04"
+ARG BASE_IMAGE="ghcr.io/99linesofcode/devcontainer:${PACKAGE_VERSION}"
 
 FROM ${BASE_IMAGE}
 
-LABEL maintainer="Jordy Schreuders <jordy@schreuders.it>"
+LABEL org.opencontainers.image.authors="99linesofcode@gmail.com"
 
 ARG DEBIAN_FRONTEND=noninteractive
 ARG USER=abc
+# See https://docs.docker.com/engine/reference/builder/#understand-how-arg-and-from-interact
+ARG PHP_VERSION
 
 SHELL ["zsh", "-c"]
 
@@ -24,7 +27,7 @@ RUN \
   && gpg --export 0x14aa40ec0831756756d7f66c4f4ea0aae5267a6c >> /usr/share/keyrings/ppa_ondrej_php.gpg \
   && echo "deb [signed-by=/usr/share/keyrings/ppa_ondrej_php.gpg] https://ppa.launchpadcontent.net/ondrej/php/ubuntu jammy main" >> /etc/apt/sources.list.d/ppa_ondrej_php.list \
   && apt-get update && apt-get install -y --no-install-recommends \
-  php${VERSION}-cli
+  php${PHP_VERSION}-cli
 
 USER $USER
 
