--- a/bttr/docker-compose.yml
+++ b/bttr/docker-compose.yml
@@ -23,6 +23,9 @@ services:
       args:
         - PACKAGE_VERSION=8.0
         - PHP_VERSION=8
+    ports:
+      - '${FORWARD_PHP_HTTP_PORT:-80}:80'
+      - '${FORWARD_PHP_HTTPS_PORT:-443}:443'
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
