fix: only set SHELL to zsh in last layer

--- a/bttr/devcontainer/Dockerfile
+++ b/bttr/devcontainer/Dockerfile
@@ -14,9 +14,9 @@ ARG PHP_VERSION
 ARG TZ="Europe/Amsterdam"
 ARG USER=abc
 
-SHELL ["zsh", "-c"]
-
 USER root
+
+SHELL ["/bin/zsh", "-c"]
 
 RUN \
   echo "*** Set timezone ***" \
