--- a/ruby/docker-compose.yml
+++ b/ruby/docker-compose.yml
@@ -1,36 +1,78 @@
 services:
   devcontainer:
-    extends:
-      file: ../php/docker-compose.yml
-      service: devcontainer
+    container_name: ${APP_NAME}.devcontainer
     build:
       context: ./devcontainer
-
-  ruby:
-    container_name: ${APP_NAME}.ruby
-    image: ghcr.io/rails/cli:latest
+      # See https://docs.docker.com/compose/compose-file/build/#ssh
+      ssh:
+        - default
+      args:
+        - TZ=${TIMEZONE-Europe/Amsterdam}
+    tty: true
     ports:
       - '${FORWARD_PHP_HTTP_PORT:-3000}:3000'
-    command: "rails server"
-    volumes:
-      - '$HOME/Development/99linesofcode/${APP_NAME}:/rails'
-
-  mysql:
-    extends:
-      file: ../php/docker-compose.yml
-      service: mysql
-
-  redis:
-    extends:
-      file: ../php/docker-compose.yml
-      service: redis
-
-  phpmyadmin:
-    extends:
-      file: ../php/docker-compose.yml
-      service: phpmyadmin
     depends_on:
       - mysql
+      - redis
+    volumes:
+      - $HOME/.ssh:/config/.ssh
+      - $HOME/.npmrc:/config/.npmrc
+      - $HOME/.config/composer/auth.json:/config/.config/composer/auth.json
+      - $HOME/Development/99linesofcode/${APP_NAME}:/config/www
+
+  mysql:
+    container_name: ${APP_NAME}.mysql
+    image: mysql/mysql-server:8.0
+    ports:
+      - ${FORWARD_DB_PORT:-3306}:3306
+    environment:
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - MYSQL_ROOT_HOST=%
+      - MYSQL_DATABASE=${DB_DATABASE}
+      - MYSQL_USER=${DB_USERNAME}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
+    volumes:
+      - vol.mysql:/var/lib/mysql
+      # - $HOME/dbdump.sql:/docker-entrypoint-initdb.d/dbdump.sql
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
+      retries: 3
+      timeout: 5s
+
+  redis:
+    container_name: ${APP_NAME}.redis
+    image: redis:alpine
+    ports:
+      - ${FORWARD_REDIS_PORT:-6379}:6379
+    volumes:
+      - vol.redis:/data
+    healthcheck:
+      test: [ CMD, redis-cli, ping ]
+      retries: 3
+      timeout: 5s
+
+  phpmyadmin:
+    image: phpmyadmin:latest
+    container_name: ${APP_NAME}.phpmyadmin
+    environment:
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - MYSQL_USER=${DB_USERNAME}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
+      - PMA_HOST=${APP_NAME}.mysql
+      - PMA_PMADB=phpmyadmin
+      - UPLOAD_LIMIT=512M
+    restart: unless-stopped
+    ports:
+      - ${PHPMYADMIN_PORT:-8888}:80
+    depends_on:
+      - mysql
+
+  mailpit:
+    container_name: ${APP_NAME}.mailpit
+    image: axllent/mailpit:latest
+    ports:
+      - ${FORWARD_MAILHOG_PORT:-1025}:1025
+      - ${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025
 
 networks:
   default:
