--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -8,13 +8,12 @@ services:
         - default
       args:
         - TZ=${TIMEZONE-Europe/Amsterdam}
-    working_dir: /config/www
     tty: true
     volumes:
       - $HOME/.ssh:/config/.ssh
       - $HOME/.npmrc:/config/.npmrc
       - $HOME/.config/composer/auth.json:/config/.config/composer/auth.json
-      - $HOME/Development/99linesofcode/${APP_NAME}:/config/www
+      - $HOME/Development/99linesofcode/${APP_NAME}:/app
 
   php:
     container_name: ${APP_NAME}.php
@@ -31,7 +30,7 @@ services:
       - XDEBUG_MODE=${PHP_XDEBUG_MODE:-off}
       - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}
     volumes:
-      - $HOME/Development/99linesofcode/${APP_NAME}/api:/config/www
+      - $HOME/Development/99linesofcode/${APP_NAME}/api:/app
     depends_on:
       - meilisearch
       - mysql
