--- a/bttr/docker-compose.yml
+++ b/bttr/docker-compose.yml
@@ -9,13 +9,12 @@ services:
       args:
         - PHP_VERSION=8.0
         - TZ=${TIMEZONE-Europe/Amsterdam}
-    working_dir: /config/www
     tty: true
     volumes:
       - $HOME/.ssh:/config/.ssh
       - $HOME/.npmrc:/config/.npmrc
       - $HOME/.config/composer/auth.json:/config/.config/composer/auth.json
-      - $HOME/Development/bttr/${APP_NAME}:/config/www
+      - $HOME/Development/bttr/${APP_NAME}:/app
 
   php:
     container_name: ${APP_NAME}.php
@@ -35,7 +34,7 @@ services:
       - XDEBUG_MODE=${PHP_XDEBUG_MODE:-off}
       - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}
     volumes:
-      - $HOME/Development/bttr/${APP_NAME}/api:/config/www
+      - $HOME/Development/bttr/${APP_NAME}/api:/app
 
   mysql:
     container_name: ${APP_NAME}.mysql
