--- a/bttr/docker-compose.yml
+++ b/bttr/docker-compose.yml
@@ -7,34 +7,25 @@ services:
       ssh:
         - default
       args:
-        - PHP_VERSION=8.0
         - TZ=${TIMEZONE-Europe/Amsterdam}
     tty: true
-    volumes:
-      - $HOME/.ssh:/config/.ssh
-      - $HOME/.npmrc:/config/.npmrc
-      - $HOME/.config/composer/auth.json:/config/.config/composer/auth.json
-      - $HOME/Development/bttr/${APP_NAME}:/app
-
-  php:
-    container_name: ${APP_NAME}.php
-    build:
-      context: .
-      args:
-        - PHP_VERSION=8.0
-        - TZ=${TIMEZONE-Europe/Amsterdam}
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     ports:
       - '${FORWARD_PHP_HTTP_PORT:-80}:80'
       - '${FORWARD_PHP_HTTPS_PORT:-443}:443'
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
       - XDEBUG_MODE=${PHP_XDEBUG_MODE:-off}
       - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}
+    depends_on:
+      - meilisearch
+      - mysql
+      - redis
     volumes:
-      - $HOME/Development/bttr/${APP_NAME}/api:/app
+      - $HOME/.ssh:/config/.ssh
+      - $HOME/.npmrc:/config/.npmrc
+      - $HOME/.config/composer/auth.json:/config/.config/composer/auth.json
+      - $HOME/Development/bttr/${APP_NAME}:/app
 
   mysql:
     container_name: ${APP_NAME}.mysql
