--- a/ruby/devcontainer/Dockerfile
+++ b/ruby/devcontainer/Dockerfile
@@ -20,7 +20,9 @@ USER root
 SHELL ["/bin/sh", "-c"]
 
 RUN \
-  echo "*** Installing runtime packages ***" \
+  echo "*** Set timezone ***" \
+  && ln -snf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} >> /etc/timezone \
+  && echo "*** Installing runtime packages ***" \
   && apt-get update && apt-get install -y --no-install-recommends \
   # asdf dependencies
   autoconf \
