--- a/ruby/docker-compose.yml
+++ b/ruby/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - $HOME/.ssh:/config/.ssh
       - $HOME/.npmrc:/config/.npmrc
       - $HOME/.config/composer/auth.json:/config/.config/composer/auth.json
-      - $HOME/Development/99linesofcode/${APP_NAME}:/config/www
+      - $HOME/Development/99linesofcode/${APP_NAME}:/app
 
   mysql:
     container_name: ${APP_NAME}.mysql
