fix: language version doesnt have to be a FROM arg

--- a/devcontainer/Dockerfile
+++ b/devcontainer/Dockerfile
@@ -16,11 +16,13 @@ ARG USER=abc
 
 WORKDIR /app
 
+SHELL ["/bin/sh", "-c"]
+
 RUN \
   echo "*** Set locale and timezone ***" \
   && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && locale-gen \
   && ln -snf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} >> /etc/timezone \
-  && echo "*** Install base dependencies ***" \
+  && echo "*** Install core dependencies ***" \
   && apt-get update && apt-get install -y --no-install-recommends \
   locales \
   gnupg \
@@ -49,7 +51,7 @@ RUN \
 
 USER ${USER}
 
-SHELL ["zsh", "-c"]
+SHELL ["/bin/zsh", "-c"]
 
 RUN \
   echo "*** Setting up development environment ***" \
