--- a/bttr/docker-compose.yml
+++ b/bttr/docker-compose.yml
@@ -7,9 +7,12 @@ services:
       ssh:
         - default
       args:
+        - NODE_VERSION=18.14.0
+        - PHP_VERSION=8.0
         - TZ=${TIMEZONE-Europe/Amsterdam}
     extra_hosts:
       - 'host.docker.internal:host-gateway'
+    tty: true
     ports:
       - '${FORWARD_PHP_HTTP_PORT:-80}:80'
       - '${FORWARD_PHP_HTTPS_PORT:-443}:443'
