--- a/ruby/docker-compose.yml
+++ b/ruby/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         - default
       args:
         - TZ=${TIMEZONE-Europe/Amsterdam}
+    tty: true
     ports:
       - '${FORWARD_PHP_HTTP_PORT:-3000}:3000'
     depends_on:
