--- a/devcontainer/Dockerfile
+++ b/devcontainer/Dockerfile
@@ -19,10 +19,7 @@ WORKDIR /app
 SHELL ["/bin/sh", "-c"]
 
 RUN \
-  echo "*** Set locale and timezone ***" \
-  && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && locale-gen \
-  && ln -snf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} >> /etc/timezone \
-  && echo "*** Install core dependencies ***" \
+  echo "*** Install core dependencies ***" \
   && apt-get update && apt-get install -y --no-install-recommends \
   locales \
   gnupg \
@@ -39,6 +36,9 @@ RUN \
   fzf \
   ripgrep \
   zsh \
+  && echo "*** Set locale and timezone ***" \
+  && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && locale-gen \
+  && ln -snf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} >> /etc/timezone \
   && echo "*** Creating abc user ***" \
   && useradd -u ${PUID} -U -d /config -s $(which zsh) -G users ${USER} \
   && echo "abc ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/${USER} \
