--- a/php/.devcontainer.json
+++ b/php/.devcontainer.json
@@ -9,8 +9,8 @@
     "vscode": {
       "settings": {
         "terminal.integrated.defaultProfile.linux": "zsh",
-        "php-cs-fixer.config": "${containerWorkspaceFolder}/api/.php-cs-fixer.dist.php",
-        "php-cs-fixer.executablePath": "${containerWorkspaceFolder}/api/vendor/bin/php-cs-fixer"
+        "php-cs-fixer.config": "${containerWorkspaceFolder}/.php-cs-fixer.dist.php",
+        "php-cs-fixer.executablePath": "${containerWorkspaceFolder}/vendor/bin/php-cs-fixer"
       },
       "extensions": [
         "bmewburn.vscode-intelephense-client",
