chore(vscode): update plugins

--- a/bttr/.devcontainer.json
+++ b/bttr/.devcontainer.json
@@ -65,13 +65,14 @@
       "extensions": [
         "bmewburn.vscode-intelephense-client",
         "bradlc.vscode-tailwindcss",
+        "calebporzio.better-phpunit",
         "dbaeumer.vscode-eslint",
+        "dotenv.dotenv-vscode",
         "editorconfig.editorconfig",
         "eamodio.gitlens",
         "graphql.vscode-graphql",
         "gruntfuggly.todo-tree",
         "junstyle.php-cs-fixer",
-        "mikestead.dotenv",
         "ms-azuretools.vscode-docker",
         "naumovs.color-highlight",
         "neilbrayfield.php-docblocker",
