--- a/bttr/docker-compose.yml
+++ b/bttr/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - $HOME/.npmrc:/config/.npmrc
       - $HOME/.config/composer/auth.json:/config/.config/composer/auth.json
       - $HOME/Development/bttr/${APP_NAME}:/app
+      - $HOME/Development/bttr/sofie:/sofie
 
   mysql:
     container_name: ${APP_NAME}.mysql
