--- a/devcontainer/Dockerfile
+++ b/devcontainer/Dockerfile
@@ -39,11 +39,12 @@ RUN \
   && echo "*** Set locale and timezone ***" \
   && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && locale-gen \
   && ln -snf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} >> /etc/timezone \
-  && echo "*** Creating abc user ***" \
+  && echo "*** Creating abc user and directories ***" \
   && useradd -u ${PUID} -U -d /config -s $(which zsh) -G users ${USER} \
   && echo "abc ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/${USER} \
   && chmod 0440 /etc/sudoers.d/${USER} \
   && mkdir -p /app /config/.local/bin /defaults \
+  && chown -R ${USER}:${USER} /app /config /defaults \
   && echo "*** Cleaning up build dependencies ***" \
   && apt-get -y autoremove \
   && apt-get clean \
