--- a/php/devcontainer/Dockerfile
+++ b/php/devcontainer/Dockerfile
@@ -21,7 +21,7 @@ USER root
 SHELL ["/bin/sh", "-c"]
 
 RUN \
-  echo "*** Set timezone ***" \
+  echo "*** Override timezone information ***" \
   && ln -snf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} >> /etc/timezone \
   && echo "*** Installing PHP ***" \
   && mkdir -p $HOME/.gnupg \
