--- a/bttr/devcontainer/Dockerfile
+++ b/bttr/devcontainer/Dockerfile
@@ -79,5 +79,6 @@ RUN \
   && php -r "readfile('https://getcomposer.org/installer');" | php -- --install-dir=/config/.local/bin --filename=composer \
   && echo "*** Installing Node.js ***" \
   && source /config/.asdf/asdf.sh \
+  && asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git \
   && asdf install nodejs ${NODE_VERSION} \
   && asdf global nodejs ${NODE_VERSION}
