fix(intelephense): indexing vendor test files
This allows for easier package development and plugin testing

--- a/php/.devcontainer.json
+++ b/php/.devcontainer.json
@@ -33,8 +33,7 @@
           "**/.git/**",
           "**/database/migrations/**",
           "**/node_modules/**",
-          "**/vendor/**/vendor/**",
-          "**/vendor/**/{Tests,tests}/**"
+          "**/vendor/**/vendor/**"
         ],
         "intelephense.environment.documentRoot": "${containerWorkspaceFolder}/public",
         "intelephense.telemetry.enabled": false,
