--- a/bttr/.devcontainer.json
+++ b/bttr/.devcontainer.json
@@ -32,8 +32,7 @@
           "**/.git/**",
           "**/database/migrations/**",
           "**/node_modules/**",
-          "**/vendor/**/vendor/**",
-          "**/vendor/**/{Tests,tests}/**"
+          "**/vendor/**/vendor/**"
         ],
         "intelephense.environment.documentRoot": "${containerWorkspaceFolder}/public",
         "intelephense.telemetry.enabled": false,
