--- a/bttr/docker-compose.yml
+++ b/bttr/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     tty: true
     environment:
       - XDEBUG_MODE=${PHP_XDEBUG_MODE:-off}
-      - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}
+      - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal output_dir=/tmp/xdebug profiler_output_name=cachegrind.out.%R.%u}
     depends_on:
       - meilisearch
       - mysql
@@ -25,6 +25,8 @@ services:
       - $HOME/.npmrc:/config/.npmrc
       - $HOME/.config/composer/auth.json:/config/.config/composer/auth.json
       - $HOME/Development/${USER}/${APP_NAME}:/app
+      # Uncomment to volume mount xdebug and cachegrind output for profiling analysis on host machine
+      # - $HOME/development/${USER}/profiling/${APP_NAME}:/tmp/xdebug
 
   mysql:
     container_name: ${APP_NAME}.mysql
