--- a/php/.env.example
+++ b/php/.env.example
@@ -4,6 +4,7 @@ PUID=1000
 PGID=1000
 
 PHP_XDEBUG_MODE="develop,debug"
+PHP_XDEBUG_CONFIG="client_host=host.docker.internal output_dir=/tmp/xdebug profiler_output_name=cachegrind.out.%R.%u"
 
 DB_PASSWORD="secret"
 DB_USERNAME="default"
