--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -124,8 +124,8 @@ services:
     container_name: ${APP_NAME}.mailpit
     image: axllent/mailpit:latest
     ports:
-      - ${FORWARD_MAILHOG_PORT:-1025}:1025
-      - ${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025
+      - ${FORWARD_MAILPIT_PORT:-1025}:1025
+      - ${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025
 
 networks:
   default:
