refactor: revert to mikestead.dotenv to avoid having to use dotenv vault

--- a/php/.devcontainer.json
+++ b/php/.devcontainer.json
@@ -63,11 +63,11 @@
         "bmewburn.vscode-intelephense-client",
         "bradlc.vscode-tailwindcss",
         "dbaeumer.vscode-eslint",
-        "dotenv.dotenv-vscode",
         "editorconfig.editorconfig",
         "eamodio.gitlens",
         "gruntfuggly.todo-tree",
         "m1guelpf.better-pest",
+        "mikestead.dotenv",
         "ms-azuretools.vscode-docker",
         "naumovs.color-highlight",
         "neilbrayfield.php-docblocker",
