--- a/ruby/.devcontainer.json
+++ b/ruby/.devcontainer.json
@@ -40,6 +40,7 @@
         "hridoy.rails-snippets",
         "kaiwood.endwise",
         "KoichiSasada.vscode-rdbg",
+        "mikestead.dotenv",
         "ms-azuretools.vscode-docker",
         "naumovs.color-highlight",
         "Shopify.ruby-lsp",
