--- a/bttr/.devcontainer.json
+++ b/bttr/.devcontainer.json
@@ -65,12 +65,12 @@
         "bradlc.vscode-tailwindcss",
         "calebporzio.better-phpunit",
         "dbaeumer.vscode-eslint",
-        "dotenv.dotenv-vscode",
         "editorconfig.editorconfig",
         "eamodio.gitlens",
         "graphql.vscode-graphql",
         "gruntfuggly.todo-tree",
         "junstyle.php-cs-fixer",
+        "mikestead.dotenv",
         "ms-azuretools.vscode-docker",
         "naumovs.color-highlight",
         "neilbrayfield.php-docblocker",
