fix: failing RUN command caused by leading &&

--- a/ruby/devcontainer/Dockerfile
+++ b/ruby/devcontainer/Dockerfile
@@ -53,7 +53,7 @@ USER ${USER}
 SHELL ["/bin/zsh", "-c"]
 
 RUN \
-  && echo "*** Installing Node.js ***" \
+  echo "*** Installing Node.js ***" \
   && source /config/.asdf/asdf.sh \
   && asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git \
   && asdf install nodejs ${NODE_VERSION} \
