feat(phpstan): run phpstan from vscode

--- a/bttr/.devcontainer.json
+++ b/bttr/.devcontainer.json
@@ -89,7 +89,7 @@
         "graphql.vscode-graphql",
         "junstyle.php-cs-fixer",
         "neilbrayfield.php-docblocker",
-        "open-southeners.laravel-pint",
+        "SanderRonde.phpstan-vscode",
         "vue.volar",
         "xdebug.php-debug"
       ]
