chore: add plugin for blade snippets and highlighting

--- a/php/.devcontainer.json
+++ b/php/.devcontainer.json
@@ -86,6 +86,7 @@
         "bradlc.vscode-tailwindcss",
         "m1guelpf.better-pest",
         "neilbrayfield.php-docblocker",
+        "onecentlin.laravel-blade",
         "open-southeners.laravel-pint",
         "SanderRonde.phpstan-vscode",
         "xdebug.php-debug"
