--- a/devcontainer/ruby/Dockerfile
+++ b/devcontainer/ruby/Dockerfile
@@ -11,6 +11,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 ARG NODE_VERSION="18.14.0"
 # See https://docs.docker.com/engine/reference/builder/#understand-how-arg-and-from-interact
 ARG RUBY_VERSION="3.2.1"
+ARG TZ="Europe/Amsterdam"
 ARG USER=abc
 
 WORKDIR /app
@@ -24,7 +25,7 @@ RUN \
   && ln -snf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} >> /etc/timezone \
   && echo "*** Installing runtime packages ***" \
   && apt-get update && apt-get install -y --no-install-recommends \
-  # asdf dependencies
+  # begin asdf dependencies
   autoconf \
   bison \
   patch \
@@ -58,8 +59,8 @@ RUN \
   && asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git \
   && asdf install nodejs ${NODE_VERSION} \
   && asdf global nodejs ${NODE_VERSION} \
-  && echo "*** Configure default gems to be installed ***" \
-  # && echo solargraph >> $HOME/.default-gems \
+  && echo "*** Configuring default gems to be installed ***" \
+  && echo solargraph >> $HOME/.default-gems \
   && echo rails >> $HOME/.default-gems \
   && echo "*** Installing Ruby ***" \
   && asdf plugin add ruby https://github.com/asdf-vm/asdf-ruby.git \
